Fix rgb link colors in dark mode

--- a/scss/_root.scss
+++ b/scss/_root.scss
@@ -184,6 +184,8 @@
 
   --#{$prefix}link-color: #{$link-color-dark};
   --#{$prefix}link-hover-color: #{$link-hover-color-dark};
+  --#{$prefix}link-color-rgb: #{to-rgb($link-color-dark)};
+  --#{$prefix}link-hover-color-rgb: #{to-rgb($link-hover-color-dark)};
 
   --#{$prefix}code-color: #{$code-color-dark};
 
